A lot of bug-fix e.g. dark mode, tailwindize and etc.

--- a/app/_components/Block.module.css
+++ b/app/_components/Block.module.css
@@ -1,32 +1,17 @@
-.block {
-  padding: 1rem;
-  margin: 1rem 0.5rem;
-  border: 1px solid transparent;
-}
+@tailwind components;
+@tailwind utilities;
 
-.block-border {
-  border-radius: 12px;
-}
-
-@media (prefers-color-scheme: dark) {
+@layer components {
   .block {
-    background-color: var(--bg-color);
-  }
-}
-
-@media (prefers-color-scheme: light) {
-  .block-border {
-    border: 1px solid #ccc;
+    @apply p-4 mx-2 my-4 border border-solid border-transparent;
   }
 
   .block-border {
-    box-shadow: 0 0 0 lightgray;
-    transition: box-shadow 0.3s ease-in-out;
+    @apply rounded-[12px] border-solid border-[#ccc] dark:border-transparent shadow-lg dark:shadow-none transition-shadow duration-300 ease-in-out;
   }
-}
 
-@media (prefers-color-scheme: light) and (pointer: fine) {
   .block-border:hover {
-    box-shadow: 0 5px 16px lightgray;
+    @apply shadow-lg dark:shadow-none;
   }
+
 }
